--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue Jan  6 12:09:47 CET 2009 Jim Meyering <meyering@redhat.com>
+
+	dist: distribute all libvirt_*.syms files, ...
+	* src/Makefile.am (EXTRA_DIST): Distribute all libvirt_*.syms files,
+	not just those that happen to be selected at configure time.
+
 Tue Jan  6 10:47:33 CET 2009 Jim Meyering <meyering@redhat.com>
 
 	avoid syntax-check (po-check) failure due to FP match on gettext.m4
