--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jan  7 11:54:06 CET 2009 Daniel Veillard <veillard@redhat.com>
+
+	* src/openvz_driver.c: fix the mac addresses generation for 
+	  OpenVZ veth devices, patch by Evgeniy Sokolov
+
 Wed Jan  7 11:38:04 CET 2009 Daniel Veillard <veillard@redhat.com>
 
 	* src/libvirt_private.syms src/qemu_driver.c src/test.c
