--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Jan 12 22:07:57 CET 2009 Daniel Veillard <veillard@redhat.com>
+
+	* docs/index.html docs/index.html.in docs/relatedlinks.html
+	  docs/relatedlinks.html.in: fix the QEmu links
+
 Mon Jan 12 19:16:00 +0000 2009 Richard W.M. Jones <rjones@redhat.com>
 
 	Fix invocation of rpcgen.
