Mark Xen PV CD-ROM devices as such

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jan 14 16:17:20 GMT 2009  John Levon  <levon@movementarian.org>
+
+	* src/xend_internal.c: Add a ':cdrom' marker for PV as well as
+	HVM devices.
+
 Wed Jan 14 15:13:17 GMT 2009  John Levon  <levon@movementarian.org>
 
 	* acinclude.m4:
