--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jan 14 17:25:38 GMT 2009  John Levon  <levon@movementarian.org>
+
+	* docs/devhelp/Makefile.am: Let devhelp build in a separate objdir.
+
 Wed Jan 14 16:21:47 GMT 2009  John Levon  <levon@movementarian.org>
 
 	* docs/Makefile.am:
