--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jan 15 15:11:35 GMT 2009  John Levon  <levon@movementarian.org>
+
+	* src/xend_internal.c: Improve xend_get error message
+
 Thu Jan 15 01:31:45 GMT 2009  John Levon  <levon@movementarian.org>
 
 	* src/xen_internal.c: implement capabilities parsing for Solaris
