--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Jan 15 20:02:19 GMT 2009  Daniel P. Berrange <berrange@redhat.com>
+
+	* src/remote_internal.c: Fix private data field access in
+	several methods
+
 Thu Jan 15 19:54:19 GMT 2009  Daniel P. Berrange <berrange@redhat.com>
 
 	Provide a generic internal API for threads support
@@ -18,9 +23,6 @@ Thu Jan 15 19:54:19 GMT 2009  Daniel P. Berrange <berrange@redhat.com>
 	src/qemu_driver.c, src/storage_conf.c, src/storage_conf.h,
 	src/storage_driver.c, src/test.c, src/uml_conf.h, src/uml_driver.c:
 	Switch over to internal threads API instead of pthreads
-
-
-
 
 Thu Jan 15 19:39:19 GMT 2009  Daniel P. Berrange <berrange@redhat.com>
 
