--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Jan 16 11:48:41 EST 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/domain_conf.c: Fix segfault with console device back compat.
+
 Thu Jan 15 20:12:19 GMT 2009  Daniel P. Berrange <berrange@redhat.com>
 
 	* src/remote_internal.c: Fix bug when fork isn't available (Win32)
