Two bug fixes coming from RHEL and Markus being added to AUTHORS * src/xm_internal.c: two bug fixes coming from RHEL package   posted by Markus Armbruster * AUTHORS: adding Markus daniel

--- a/AUTHORS
+++ b/AUTHORS
@@ -58,6 +58,7 @@ Patches have also been contributed by:
   Gerd von Egidy       <lists@egidy.de>
   Itamar Heim          <iheim@redhat.com>
   Dave Allan           <dallan@redhat.com>
+  Markus Armbruster    <armbru@redhat.com>
 
   [....send patches to get your name here....]
 
