--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Jan 19 16:18:46 CET 2009 Daniel Veillard <veillard@redhat.com>
+
+	* src/xm_internal.c: two bug fixes coming from RHEL package
+	  posted by Markus Armbruster
+	* AUTHORS: adding Markus
+
 Fri Jan 16 18:44:08 +0100 2009 Jim Meyering <meyering@redhat.com>
 
 	tests: virsh-all and virsh-synopsis were not being run
