Fix PVFB version check for RHEL-5 * src/xend_internal.c src/xm_internal.c: fix paravirt framebuffer   handling since it was backoprted for RHEL-5, patch by Markus   Armbruster daniel

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Jan 19 20:47:18 CET 2009 Daniel Veillard <veillard@redhat.com>
+
+	* src/xend_internal.c src/xm_internal.c: fix paravirt framebuffer
+	  handling since it was backoprted for RHEL-5, patch by Markus
+	  Armbruster
+
 Mon Jan 19 19:10:08 CET 2009 Daniel Veillard <veillard@redhat.com>
 
 	* src/xend_internal.c src/xm_internal.c: fix fully virt network
