--- a/AUTHORS
+++ b/AUTHORS
@@ -53,7 +53,7 @@ Patches have also been contributed by:
   Nguyen Anh Quynh     <aquynh@gmail.com>
   James Morris         <jmorris@namei.org>
   Chris Wrigh          <chrisw@redhat.com>
-  Ben Guthro           <bguthro@virtualiron.com>
+  Ben Guthro           <ben.guthro@gmail.com>
   Shigeki Sakamoto     <fj0588di@aa.jp.fujitsu.com>
   Gerd von Egidy       <lists@egidy.de>
   Itamar Heim          <iheim@redhat.com>
