--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Tue Jan 20 12:08:53 GMT 2009 Daniel P. Berrange <berrange@redhat.com>
+
+	* include/libvirt/libvirt.h, include/libvirt/libvirt.h.in,
+	src/libvirt.c, src/libvirt_public.syms: Add new ref counting
+	APIs for public objects: virConnectRef, virDomainRef,
+        virNetworkRef, virStoragePoolRef, virStorageVolRef,
+        virNodeDeviceRef
+
 Tue Jan 20 12:03:53 GMT 2009 Daniel P. Berrange <berrange@redhat.com>
 
 	* tests/cpuset, tests/read-bufsiz, tests/start, tests/undefine,
